@@ -67,16 +67,6 @@ described <a href="preferences.html">here</a>.</small>
 password policies.  You may create up to 255 named password policies and the name
 of each of these policies cannot be greater than 255 characters.</p>
 
-<h3>Validate</h3>
-
-<p>After selecting a database, this database will be checked for being
-completely compatible to <b>Password Safe</b>.  In order to ensue complete
-compatibility with <b>Password Safe</b>, databases are now always validated
-during opening.</p>
-
-<p><small>Note: This menu item will only be enabled if there is no database 
-currently opened.</small></p>
-
 <h3>Customize Main Toolbar</h3>
 
 <p>This allows you to select which commands appear on the toolbar, and in which order.</p>
