@@ -709,7 +709,6 @@ protected:
   afx_msg void OnDuplicateEntry();
   afx_msg void OnOptions();
   afx_msg void OnManagePasswordPolicies();
-  afx_msg void OnValidate();
   afx_msg void OnGeneratePassword();
   afx_msg void OnSave();
   afx_msg void OnAdd();
