@@ -143,7 +143,6 @@ const UINT CPWToolBar::m_OtherIDs[] = {
   ID_MENUITEM_CHANGECOMBO,
   ID_MENUITEM_BACKUPSAFE,
   ID_MENUITEM_RESTORESAFE,
-  ID_MENUITEM_VALIDATE,
   ID_MENUITEM_EXIT,
   ID_MENUITEM_ABOUT,
   ID_MENUITEM_TRAYUNLOCK,
@@ -227,7 +226,6 @@ const UINT CPWToolBar::m_OtherClassicBMs[] = {
   IDB_CHANGECOMBO_CLASSIC,
   IDB_BACKUPSAFE_CLASSIC,
   IDB_RESTORE_CLASSIC,
-  IDB_VALIDATE_CLASSIC,     // Yes, it is correct to be here twice!
   IDB_EXIT_CLASSIC,
   IDB_ABOUT_CLASSIC,
   IDB_TRAYUNLOCK_CLASSIC,
@@ -356,7 +354,6 @@ const UINT CPWToolBar::m_OtherNewBMs[] = {
   IDB_CHANGECOMBO_NEW,
   IDB_BACKUPSAFE_NEW,
   IDB_RESTORE_NEW,
-  IDB_VALIDATE_NEW,       // Yes, it is correct to be here twice!
   IDB_EXIT_NEW,
   IDB_ABOUT_NEW,
   IDB_TRAYUNLOCK_NEW,
@@ -395,7 +392,6 @@ const UINT CPWToolBar::m_OtherNewDisBMs[] = {
   IDB_CHANGECOMBO_NEW_D,
   IDB_BACKUPSAFE_NEW_D,
   IDB_RESTORE_NEW_D,
-  IDB_VALIDATE_NEW_D,       // Yes, it is correct to be here twice!
   IDB_EXIT_NEW_D,
   IDB_ABOUT_NEW_D,
   IDB_TRAYUNLOCK_NEW_D,
