@@ -201,7 +201,6 @@ BEGIN
         MENUITEM "", 0, MFT_SEPARATOR
         MENUITEM "&Options...",                 ID_MENUITEM_OPTIONS, MFT_STRING
         MENUITEM "Password Policies...",        ID_MENUITEM_PSWD_POLICIES, MFT_STRING
-        MENUITEM "&Validate...",                ID_MENUITEM_VALIDATE, MFT_STRING
         MENUITEM "Customize &Main Toolbar",     ID_MENUITEM_CUSTOMIZETOOLBAR, MFT_STRING
         MENUITEM "", 0, MFT_SEPARATOR
         MENUITEM "Generate &Password",          ID_MENUITEM_GENERATEPASSWORD, MFT_STRING
