@@ -20,7 +20,8 @@ edited and deleted), exported and imported, used in filters and to generate pass
 
 Changes to Existing Features in 3.27.1
 ======================================
-[] The default backup policy has been changed to save the last three versions of the database, instead of one.
+[] The default backup policy has been changed to save the last three
+versions of the database, instead of one. 
 [3445820] The Edit menu item and entry right-click context menu item "Copy Run Command to
 Clipboard" will, by default, substitute any variables within the command. To disable this,
 hold down the Ctrl key when selecting these menu items.  The standard menu shortcut cannot
@@ -35,7 +36,8 @@ the XML file exported prior to V3.26 to allow it to be successfully imported in 
 attempt to access the directory of the last opened database in order to allow the user
 to start browsing for their intended database.  If this directory is not available,
 PasswordSafe will open the default "My Safes" directory as it did prior to this change.
-[] Databases are always validated on opening.
+[] Databases are now always validated when opened. The Manage->Validate
+menu item has therefore been removed.
 
 Bugs fixed in 3.27.1
 ====================
